# quicky_utils

./: .travis.yml  CMakeLists.txt  README.md  README.txt  RELEASE_NOTES.txt  infra_infos.txt
include/: ansi_colors.h  common.h  ext_int.h  ext_uint.h  fract.h  multi_thread_signal_handler.h  multi_thread_signal_handler_listener_if.h  password_input.h  quicky_C_io.h  quicky_bitfield.h  quicky_files.h  quicky_test.h  quicky_utils.h  safe_int.h  safe_types.h  safe_uint.h  safe_uint_exception.h  signal_handler.h  signal_handler_listener_if.h  test_fract.h  type_string.h
src/: main_quicky_utils.cpp  quicky_test.cpp  signal_handler.cpp  test_ext_types.cpp  test_multi_thread_signal_handler.cpp  test_quicky_bitfield.cpp  test_safe_types.cpp
